<resources>
    <string name="app_name">Carrecomendations</string>

    <!-- Judul untuk Bottom Navigation -->
    <string name="title_home">Beranda</string>
    <string name="title_search">Cari</string>
    <string name="title_favorites">Favorit</string>
    <string name="title_profile">Profil</string>

    <!-- String untuk Halaman Beranda -->
    <string name="greeting_user">HI! Mr.Miaow</string>
    <string name="welcome_back">Welcome back</string>
    <string name="recommendation_title">Mobil Rekomendasi Untuk Kamu Telah Hadir!</string>

    <!-- String untuk Halaman Detail (YANG HILANG) -->
    <string name="detail_mobil">Detail Mobil</string>
    <string name="tambah_ke_favorite">Tambah ke Favorite</string>

    <!-- String untuk daftar mobil -->
    <string name="car_mg_cyberster">MG Cyberster</string>
    <string name="car_porsche">Porsche 911 GT3 RS</string>
    <string name="car_toyota">Toyota New Hilux Rangga</string>
    <string name="car_mitsubishi">Mitsubishi All New Triton</string>
    <string name="car_bentley">Bentley Continental</string>
    <string name="car_mc_laren">MC Laren F1</string>
    <string name="car_pagani">Pagani Huayra</string>
    <string name="car_byd">BYD Dolphin</string>
    <string name="car_mazda">Mazda 2</string>
    <string name="car_honda">Honda Brio Satya E CVT</string>
    <string name="car_zenvo">Zenvo St1</string>
    <string name="car_daihatsu">Daihatsu Gran Max</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
